improved building, help files fixes

--- a/resources.qrc
+++ b/resources.qrc
@@ -7,6 +7,8 @@
     <file>help_en/help.md</file>
     <file>help_en/screen_commands.md</file>
     <file>help_en/warranty.md</file>
+    <file>help_en/screen.md</file>
+    <file>help_en/visuals.md</file>
 
     <file>freg_ru.qm</file>
 
