--- a/resources.qrc
+++ b/resources.qrc
@@ -1,17 +1,14 @@
-<!DOCTYPE RCC><RCC version="1.0">
-<qresource>
-    <file>texts/splash.txt</file>
-    <file>texts/death.txt</file>
-
-    <file>help_en/commands.md</file>
-    <file>help_en/help.md</file>
-    <file>help_en/screen_commands.md</file>
-    <file>help_en/warranty.md</file>
-    <file>help_en/screen.md</file>
-    <file>help_en/visuals.md</file>
-
-    <file>freg_ru.qm</file>
-
-    <file>recipes/different.json</file>
-</qresource>
+<RCC>
+    <qresource prefix="/">
+        <file>texts/splash.txt</file>
+        <file>texts/death.txt</file>
+        <file>help_en/commands.md</file>
+        <file>help_en/help.md</file>
+        <file>help_en/screen_commands.md</file>
+        <file>help_en/warranty.md</file>
+        <file>help_en/screen.md</file>
+        <file>help_en/visuals.md</file>
+        <file>freg_ru_RU.qm</file>
+        <file>recipes/different.json</file>
+    </qresource>
 </RCC>
